raffia/tests/error/scss/at-rule/forward/with-missing-value.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but found `)`
  ┌─ with-missing-value.scss:1:26
  │
1 │ @forward "other" with ($a);
  │                          ^


